Edited Proposed Solution (left old version below for reference)

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "source": [
     "##### Mechanics of Problem\n",
-    "For the version of Shanghai Mahjong we are using, there are 34 types of tiles: numbers 1-9 for each of three suits, and 7 unnumbered honor suits. The numbered tiles can be combined into runs of three (e.g. 3, 4, 5) of the same suit, and all tiles can be combined into sets of two- or three-of-a-kind. Each player has a hand of 13 tiles, to which one is added at the start of their turn and one removed at the end; if after adding a tile, a player's hand consists of 4 runs or sets of 3 (including a combination of runs and sets) and one set of two, that player wins. When a tile is discarded, each player who did not discard it has a chance, in turn order, to take it and form a set of three, and if none do so, the next player can take it and form a run; if any of these things happen, the set or run formed with the discarded tile cannot be broken (tiles in it cannot be discarded or used in other sets or runs). If none of these occur, or it is the first round of the game, the next player draws a tile from the wall. When a player takes a tile, it becomes their turn regardless of whether they were next in line. "
+    "For the version of Shanghai Mahjong we are using, there are 34 types of tiles: numbers 1-9 for each of three suits, and 7 unnumbered honor suits. The numbered tiles can be combined into runs of three (e.g. 3, 4, 5) of the same suit, and all tiles can be combined into sets of two- or three-of-a-kind. Each player has a hand of 13 tiles, to which one is added at the start of their turn and one removed at the end; if after adding a tile, a player's hand consists of 4 runs or sets of 3 (including a combination of runs and sets) and one set of two, that player wins. When a tile is discarded, each player who did not discard it has a chance, in turn order, to take it and form a set of three, and if none do so, the next player can take it and form a run; if any of these things happen, the set or run formed with the discarded tile cannot be broken (tiles in it cannot be discarded or used in other sets or runs). If none of these occur, or it is the first round of the game, the next player draws a tile from the wall. When a player takes a tile, it becomes their turn regardless of whether they were next in line. When a player is one tile away from winning, that player can take that tile when discarded regardless of the normal rules for Pung and Chi, but cannot do so if a tile of the same type is in their discard pile."
    ]
   },
   {
@@ -107,6 +107,24 @@
     "\n",
     "If it is appropriate to the problem statement, describe a benchmark model<a name=\"sota\"></a>[<sup>[3]</sup>](#sotanote) against which your solution will be compared. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Due to the highly stochastic nature of the Mahjong state space, we used on-policy Monte Carlo methods with exploring starts. Our initial encoding of the state space consisted of a set of custom `Tile` objects stored in lists: one for each player's hand, one for each player's discard pile, and one for the wall. Agents typically only have access to their own hand and all players' discard piles, but we did consider training an `OracleAgent` that starts with access to the full state space, then training a normal agent to mimic the actions of the oracle - ideally, this would speed up training significantly. We used the deep learning version of Monte Carlo, implemented in PyTorch using `nn.Linear` layers and `nn.ReLU` activations. Because our initial encoding could not be directly fed into our neural network, we experimented with different methods of encoding, eventually deciding on a matrix representation that is permutation-invarient, greatly reducing the size of the state space.  \n",
+    "  \n",
+    "There are two parts of Mahjong that an agent needs to learn: when to Pung or Chi, and which tile to discard. Poor performance on either will result in poor performance overall; and since the two decisions will require separate decision-making elements, we decided it would be best to train an agent to a reasonable level of performance on one before forcing it to learn the other as well. This was a more efficient use of our time, as it made it much easier to create a model capable of learning something, and in principle seems likely to accelerate the agent's learning as well. To this end, we used heuristics to determine whether to Pung or Chi, while our agent learned which tile to discard. Namely, our agents will always Pung or Chi if possible.  \n",
+    "  \n",
+    "The simplest way of training an agent using Monte Carlo methods would be to give it a positive reward for doing what we want it to do (winning a hand) and a negative reward for failing to do so. However, given the size of the state space and our limited time and computational resources, we decided to start out by also giving the model small rewards based on heuristic functions. We explored two possible heuristics: giving a small negative reward for discarding a tile that can form part of a run or set, and giving a small positive reward for getting a Pung or Chi. Such methods are generally inadvisable, as they carry the risk that the model will learn to maximize the heuristic in a way that doesn't improve actual performance. However, so long as we check our agents' performance using objective methods and abandon the heuristics when they cease to be useful (either when we notice a divergence in rewards and actual performance, or when the model reaches a certain level of performance), they may help accelerate the early phase of training - and given our limited time and computational resources, the sooner we reach the point where our agents have a somewhat usable strategy, the better.  \n",
+    "  \n",
+    "The most reasonable benchmarks for performance are a random policy, for making sure that some learning occurs, and our own performance as amateur players - though the latter would require coding a user interface, and so is probably not worth the time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
