Wrote Limitations section.

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -243,8 +243,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Interpretation of Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Limitations\n",
+    "Our biggest issue was planning and coordination. We tried to do too much, and jumped ahead too fast, which resulted in different teams working on separate implementations of the same thing - for example, we had at least three different state representations and at least two different neural networks, and created a new file every time we wanted to test one of them. This also resulted in us having difficulty implementing textbook Monte Carlo algorithms, which should not have been nearly as difficult as they were, and wouldn't have been if we'd had multiple pairs of eyes looking at them from the start.  \n",
+    "  \n",
+    "Beyond this, a lot of our issues  stemmed from computational limitations. Early attempts to get Monte Carlo training loops to work failed in part because we lacked the time to let them run a couple dozen rounds, much less a couple hundred. These limits were exacerbated by our poor time management and by inefficient code - the initial implementation of our state space required moving objects to and from variable-length lists multiple times per turn, which has not been entirely phased out even in our most experimental version of the game environment, as well as creating new tensors frequently (something that PyTorch warns against because it incurs a significant computational overhead). But even without these inefficiencies, there was only so much we could do running Monte Carlo simulations on the CPU of a personal computer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Future work\n",
-    "\n",
     "The biggest struggles with our work was optimizing our environment, efficiently simulating agents, and applying textbook Monte Carlo algorithms for optimization. Some steps we would have liked to try is reducing the state space from the 10^48 possible states to total possible melds or simply tiles to reduce the computational cost for both Monte Carlo and reward prediction algorithms. We additionally should have better utilized the strategy of tile encoding with 4 channels to properly calculate probabilities of a win given the current hand of the AI.\n",
     "\n",
     "In terms of different strategies, instead of relying on simulations, we could have scraped state-action pair data from top mahjong players online or via the World Mahjong Championship records to utilize supervised learning, or focus more on run-time policy adapatation to improve optimization mid-game rather than a general strategy for training. The main roadblock for the Mahjong AI algorithm project is the computational effiency of a CPU as well as insufficient simulation time after changing strategies too far into the project. However, it is definitely possible to make use of these strategies to shorten runtime as well as greatly improve an AI agent for Shanghai mahjong based on previous precedent of Microsoft's Suphyx.<a name=\"li\"></a>[<sup>[3]</sup>](#linote)\n",
@@ -252,6 +268,13 @@
     "### Ethics & Privacy\n",
     "\n",
     "There are two potential ethical concerns with this project. One is that if it works well enough, it could be used to cheat in high-stakes games; the other is that someone could find a way of using part of our code to do something different. Neither of these are particularly concerning - people put a lot of effort into preventing people from cheating in high-stakes gambling, and the program we’re trying to make is similar enough to other existing programs that we’re unlikely to find anything particularly new that isn’t specific to this kind of game. If we were planning on deploying it (commercially or for free), we’d also have to worry about ensuring equal access for anyone who wants it.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion"
    ]
   },
   {
