--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, the mean step length isn’t lowering, but staying completely flat, which comes from the way we represented our state space. The model isn’t able to understand the relationships between the tiles, which results in a lot of melds being broken up and the game ending without a winning "
+    "However, learning seems to end here, as reward remains fairly constant from then on. Moreover, the mean step length (number of turns it takes to complete an episode) remains comstant, indicating that the model never wins a game. This is likely due in part to our representation of the state space limiting the model's ability to understand relationships between tiles, and in part to the sheer size of the state space - 2000 episodes isn't enough to explore even a fraction of the possible combinations."
    ]
   },
   {
@@ -480,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -494,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
