minor edit to Proposed Solution

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to the highly stochastic nature of the Mahjong state space, we used on-policy Monte Carlo methods with exploring starts. Our initial encoding of the state space consisted of a set of custom `Tile` objects stored in lists: one for each player's hand, one for each player's discard pile, and one for the wall. Agents typically only have access to their own hand and all players' discard piles, but we did consider training an `OracleAgent` that starts with access to the full state space, then training a normal agent to mimic the actions of the oracle - ideally, this would speed up training significantly. We used the deep learning version of Monte Carlo, implemented in PyTorch using `nn.Linear` layers and `nn.ReLU` activations. Because our initial encoding could not be directly fed into our neural network, we experimented with different methods of encoding, eventually deciding on a matrix representation that is permutation-invarient, greatly reducing the size of the state space.  \n",
+    "Due to the highly stochastic nature of the Mahjong state space, we used Monte Carlo methods with exploring starts. Our initial encoding of the state space consisted of a set of custom `Tile` objects stored in lists: one for each player's hand, one for each player's discard pile, and one for the wall. Agents typically only have access to their own hand and all players' discard piles, but we did consider training an `OracleAgent` that starts with access to the full state space, then training a normal agent to mimic the actions of the oracle - ideally, this would speed up training significantly. We used the deep learning version of Monte Carlo, implemented in PyTorch using `nn.Linear` layers and `nn.ReLU` activations. Because our initial encoding could not be directly fed into our neural network, we experimented with different methods of encoding, eventually deciding on a matrix representation that is permutation-invarient, greatly reducing the size of the state space.  \n",
     "  \n",
     "There are two parts of Mahjong that an agent needs to learn: when to Pung or Chi, and which tile to discard. Poor performance on either will result in poor performance overall; and since the two decisions will require separate decision-making elements, we decided it would be best to train an agent to a reasonable level of performance on one before forcing it to learn the other as well. This was a more efficient use of our time, as it made it much easier to create a model capable of learning something, and in principle seems likely to accelerate the agent's learning as well. To this end, we used heuristics to determine whether to Pung or Chi, while our agent learned which tile to discard. Namely, our agents will always Pung or Chi if possible.  \n",
     "  \n",
@@ -390,6 +390,20 @@
     "sns.lineplot( data=df1, x='episode', y='steps');\n",
     "plt.title('The mean step length of an episode goes down with episode number')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reward Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obviously, this didn't work"
    ]
   },
   {
