Slight wording changes

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, learning seems to end here, as reward remains fairly constant from then on. Moreover, the mean step length (number of turns it takes to complete an episode) remains comstant, indicating that the model never wins a game. This is likely due in part to our representation of the state space limiting the model's ability to understand relationships between tiles, and in part to the sheer size of the state space - 2000 episodes isn't enough to explore even a fraction of the possible combinations."
+    "However, learning seems to end here, as reward remains fairly constant from then on. Moreover, the mean step length (number of turns it takes to complete an episode) remains comstant, indicating that the model never wins a game. This is most likely because the state space lacks the information that the agent needs - the agent doesn't know what tiles are in its hand, meaning it cannot learn how to play the game."
    ]
   },
   {
