--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -56,9 +56,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import random\n",
-    "# from monte_carlo_control import OnePlayerMahjongGame\n",
-    "# from monte_carlo_try import MonteCarlo"
+    "import random"
    ]
   },
   {
