changed title and fixed formatting

--- a/Proposal_Project_Mahjong_AI.ipynb
+++ b/Proposal_Project_Mahjong_AI.ipynb
@@ -58,25 +58,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data\n",
-    "\n",
-    "We don't yet know what dataset(s) will be so we describe the desire below.\n",
-    "- link/reference to obtain it\n",
-    "→online free accesible dataset\n",
-    "- description of the size of the dataset (# of variables, # of observations)\n",
-    "→Not so large to reduce the learning time, around several thousands.\n",
-    "- what an observation consists of\n",
-    "→players' current hands, current tiles on the table, and actions taken by players\n",
-    "- what some critical variables are, how they are represented\n",
-    "→Player hand (list of numbers), actions taken(numbers), the discarded tiles(numbers)\n",
-    "- any special handling, transformations, cleaning, etc will be needed\n",
-    "→we should unify to one mahjong rule and modify the dataset because the rule depends on the area."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Proposed Solution\n",
     "\n",
     "To implement our solution, we plan to use Monte Carlo methods to help train an AI to play the simplified version of Mahjong. First, we have to program this simplified version of the game. As stated in the problem statement, the objective of this game is to have a total of 4 straights or three of a kind and one pair. Each state will consist of the current hand of 13 tiles, what the opponents has tossed, and what tile has been drawn. The actions one can take is chi, pung, drawing a tile, discarding a tile, or nothing. The AI can only chi a tile if it's tossed by the player before it. The AI must draw a tile on it's turn. The AI can only discard a tile if they just drew a tile, chi, or pung. The AI can only do nothing if an opponent tossed out a tile that can't be chi or pung. The values for each action will be shown below: \n",
@@ -110,6 +91,20 @@
     "- $N_{win}$ = Number of games won  \n",
     "- $N_{total}$= Total number of games played  \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discussion"
    ]
   },
   {
