--- a/FinalProject_MahjongAI.ipynb
+++ b/FinalProject_MahjongAI.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 118B - Final Project"
+    "# COGS 118B - Mahjong AI Final Project"
    ]
   },
   {
