--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -407,6 +407,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Global reward prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subsection 1\n",
+    "In the global reward prediction model, we have to train the predictor to predict the final reward based on the current information. Hence we use NN and convey the current information to it in order to decide the player's action. In Mahjong, player's action is mostly the following two things, whether we do pung or chi and which tile we discard. Thus at first we tried to build 2 NN and each is trained specifying for deciding pung or chi and deciding which tile to discard. However in this time we only use NN to decide the tile we discard and use epsilon-greedy to determine pung or chi to simplify the model. Below is the epsilon-greedy model we use there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def can_pong_from_discard(self, current_player, state, discarded_tile, num_players = 4, epsilon=0.2):\n",
+    "        \"\"\"\n",
+    "        Check if the player can form a Pong (3 identical tiles) using a discarded tile.\n",
+    "        \"\"\"\n",
+    "        # Count how many of the discarded tile exist in the player's hand\n",
+    "        for player in ((current_player + 1) % num_players, (current_player + 2) % num_players, (current_player + 3) % num_players):\n",
+    "            hand = state['hand'][player]\n",
+    "            count = sum(1 for tile in hand if tile.suit == discarded_tile.suit and tile.value == discarded_tile.value)\n",
+    "            # If the player has two of the discarded tile, they can form a Pong\n",
+    "            if count == 2 and np.random.rand() > epsilon:\n",
+    "                state['hand'][player].append(discarded_tile)\n",
+    "                print(f\"Player {player} forms a Pong with {discarded_tile}\")\n",
+    "                if self.check_win(player):\n",
+    "                    print(f\"Player {player} wins!\")\n",
+    "                    return True\n",
+    "                best_tile_to_discard = decide_tile_to_discard(agent, self.get_game_state())#true or false\n",
+    "                return True, best_tile_to_discard, player\n",
+    "        return False, discarded_tile, current_player\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As above, under the circumstance player can do pung or chi, we define doing it as greedy policy and not doing it as non greedy policy. We can see the approproate action based on this model from the output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subsection 2\n",
+    "As for the NN, we have to convey the information that is related to decide which tile to discard. We include below information to it;the number of melds in the player's hand, the number of pairs in the player's hand, and the number of discarded tiles which is same as the tile the player just has drawn. We convey these feature into NN and help it decide the tile. Below is the code of this field."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def decide_tile_to_discard(agent, state):\n",
+    "    hand = state[\"hand\"][state[\"current_player\"]]#current player hand    \n",
+    "    best_tile = None\n",
+    "    best_value = -float(\"inf\")  \n",
+    "    for tile in hand:\n",
+    "        state_features = look_ahead_features(state, state[\"current_player\"], drawn_tile=tile)\n",
+    "        predicted_value = agent.predict_reward(state_features).item()\n",
+    "        if predicted_value > best_value:\n",
+    "            best_value = predicted_value\n",
+    "            best_tile = tile\n",
+    "    if best_tile not in hand:\n",
+    "        print(f\"Error: {best_tile} not found in player's hand!\")\n",
+    "        return None\n",
+    "    return best_tile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The \"agent\" suggests NN and it could predict the best action　based on the \"state_feature\". "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subsection 3\n",
+    "\n",
+    "In most of the case we couldn't get disirable results, which means pile goes away faster than AI wins its hand. When we see the consequence of the final round just before the pile goes away, players' hands and discarded tiles are as following.<br>\n",
+    "'hand':<br>\n",
+    "player0[pins 7, pins 9, sticks 4, sticks 5, sticks 8, sticks 8, sticks 9, sticks 9, 中 0, 中 0, 北 0, 北 0, 南 0, 南 0], <br>\n",
+    "player1[pins 6, sticks 4, sticks 5, sticks 5, sticks 6, sticks 7, sticks 9, 中 0, 南 0, 發 0, 發 0, 白 0], <br>\n",
+    "player2[pins 3, pins 3, pins 6, pins 7, pins 9, sticks 1, sticks 6, sticks 6, 東 0, 東 0, 發 0, 西 0], <br>\n",
+    "player3[mans 5, mans 7, mans 8, mans 9, pins 2, sticks 7, sticks 7, sticks 8, 北 0, 東 0, 白 0, 白 0, 西 0, 西 0], <br>\n",
+    "'discards':<br>\n",
+    "player0[mans 1, mans 1, mans 2, mans 3, mans 3, mans 5, mans 6, mans 7, mans 8, pins 1, pins 2, pins 4, pins 4, pins 5, pins 7, sticks 1, sticks 2, sticks 4, sticks 9, 北 0], <br>\n",
+    "player1[mans 1, mans 4, mans 4, mans 5, mans 6, mans 8, pins 1, pins 2, pins 4, pins 5, pins 7, pins 8, pins 8, pins 9, sticks 1, sticks 3, sticks 3, sticks 4, sticks 5, 東 0, 西 0], <br>\n",
+    "player2[mans 1, mans 3, mans 4, mans 5, mans 6, mans 6, mans 7, mans 8, mans 9, pins 1, pins 2, pins 3, pins 4, pins 5, pins 6, pins 8, sticks 2, sticks 3, sticks 6, sticks 8, 發 0, 白 0], <br>\n",
+    "player3[mans 2, mans 2, mans 2, mans 3, mans 4, mans 7, mans 9, mans 9, pins 1, pins 3, pins 5, pins 6, pins 8, pins 9, sticks 1, sticks 2, sticks 2, sticks 3, sticks 7, 中 0, 南 0]<br>\n",
+    "\n",
+    "From this information we can say that the model doesn't learn properly from the conveyed information. The possible reason is the characteristic we convey to the NN is just a number of melds or pairs. Model has to receive the concrete information like the kinds of tile it has. However in that case the model must need more time to execute, which might be beyond our skill."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -416,15 +520,20 @@
     "### Interpreting the result\n",
     "\n",
     "OK, you've given us quite a bit of tech informaiton above, now its time to tell us what to pay attention to in all that.  Think clearly about your results, decide on one main point and 2-4 secondary points you want us to understand. Highlight HOW your results support those points.  You probably want 2-5 sentences per point.\n",
+    "### Global reward prediction\n",
+    "In global reward prediction model, the model cannot reach the winning hand. It must be because of the information that is conveyed to NN. Even though we transmit the key features to the NN, which lacks specification thus model cannot finds the clear relationship between the discarded tile and tiles in hand.\n",
     "\n",
     "\n",
     "### Limitations\n",
     "\n",
     "Are there any problems with the work?  For instance would more data change the nature of the problem? Would it be good to explore more hyperparams than you had time for?   \n",
-    "\n",
+    "### Global reward prediciton\n",
+    "If we could convey the concrete information like all of the kinds of tiles in hand to the NN, we might be able to implement the model properly but that should be too large to handle.\n",
     "\n",
     "### Future work\n",
     "Looking at the limitations and/or the toughest parts of the problem and/or the situations where the algorithm(s) did the worst... is there something you'd like to try to make these better.\n",
+    "### Global reward prediction\n",
+    "Transmitting all of the tiles' information is too large for NN to handle. Thus we should limit the information model handles, for example it doesn't take care of the honors because it is less likely to become combo, hence it should be discarded preferentially.\n",
     "\n",
     "### Ethics & Privacy\n",
     "\n",
