--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -466,6 +466,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def look_ahead_features(state, player, drawn_tile):#deciding which tile to discard\n",
+    "    features = []\n",
+    "    features.append(len(find_melds(state['hand'][player])))#adding current player's melds' number to features\n",
+    "    features.append(pair_count(state['hand'][player]))##adding current player's pair's number to features\n",
+    "    features.append(discard_count(state, drawn_tile))#adding number of discarded tiles same as drawn_tile to features\n",
+    "\n",
+    "    return torch.FloatTensor(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def decide_tile_to_discard(agent, state):\n",
     "    hand = state[\"hand\"][state[\"current_player\"]]#current player hand    \n",
     "    best_tile = None\n",
