fixed intro writing

--- a/FinalProject_MahjongAI.ipynb
+++ b/FinalProject_MahjongAI.ipynb
@@ -34,39 +34,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import random\n",
-    "# from monte_carlo_control import OnePlayerMahjongGame\n",
-    "# from monte_carlo_try import MonteCarlo"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Abstract (130 words)\n",
-    "Is it possible to design an AI algorithm that behaves similar to human players ranging from beginning to master for the simple-styled Shanghai mahjong? The data used represents training data by simulations and measures the skill expression of our agent given a starting hand. Our environment is used to guide the AI algorithm how to behave as an agent with a goal to win but with differentiating skill levels. The performance level is measured by playing alone, against other players and an oracle agents to reach the intended state of play. Though the original standard for the AI algorithm was not met, the process of designing a purposeful mahjong environment, reward prediction algorithm, functionable agent, and monte carlo algorithm allowed for discoveries of efficiencies, and reasonable simplifications for runtime/feasibility."
+    "# Abstract (117 words)\n",
+    "Is it possible to design an AI algorithm that behaves similar to human players ranging from beginning to master for the simple-styled Shanghai mahjong? The data used represents training data by simulations and measures the skill expression of our agent given a starting hand. Our environment is used to guide the AI algorithm how to behave as an agent with a goal to win. The performance level is measured by playing alone to reach the intended state of play. Though the original standard for the AI algorithm was not met, the process of designing a purposeful mahjong environment, reward prediction algorithm, functionable agent, and Monte Carlo algorithm allowed for discoveries of efficiencies, and reasonable simplifications for runtime/feasibility."
    ]
   },
   {
@@ -87,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mahjong is an iconic multiplayer imperfect information game that has been played for nearly 2 centuries around the world, originating in China in the mid-1800s<a name=\"lang\"></a>[<sup>[1]</sup>](#langnote). One of the reasons it is so beloved by millions of players is because of the flexible rulesets, point system, complex strategies, and fun it brings to all players. However, it is a game involving very much stochasticity as each of the players try to find a winning set of 14 tiles. While there are certainly many mahjong AI algorithms like those used in online games such as Mahjong Soul and Microsoft’s Suphx, the goal is to create an optimized AI algorithm for Shanghai mahjong that is fair and behaves in a manner similar to humans.\n",
+    "Mahjong is an iconic multiplayer imperfect information game that has been played for nearly 2 centuries around the world, originating in China in the mid-1800s<a name=\"lang\"></a>[<sup>[1]</sup>](#langnote). One of the reasons it is so beloved by millions of players is because of the flexible rulesets, point system, complex strategies, and fun it brings to all players. Each of the players has a goal of finding a winning set of 14 tiles before everyone else. While there are certainly many mahjong AI algorithms like those used in online games such as Mahjong Soul and Microsoft’s Suphx, the goal is to create an optimized AI algorithm for Shanghai mahjong that is fair and behaves in a manner similar to humans.\n",
     "\n",
     "\n",
     "One way to analyze training data is simply by using a trainer like those created by players such as Euophrys<a name=\"euophrys\"></a>[<sup>[2]</sup>](#euophrysnote) to scrape actual gameplay from online records (such as Mahjong Soul’s database) for different levels of play; this helps for understanding different methods of playing mahjong as well as different rulesets (Mahjong Soul’s style is called jantama/riichi mahjong). On the other hand, when designing an optimal algorithm, it is important to look into Suphx and the way deep reinforcement learning is used to formulate the best strategy.<a name=\"li\"></a>[<sup>[3]</sup>](#linote) \n",
@@ -120,7 +92,7 @@
    "metadata": {},
    "source": [
     "##### Mechanics of Problem\n",
-    "For the version of Shanghai Mahjong we are using, there are 34 types of tiles: numbers 1-9 for each of three suits, and 7 unnumbered honor suits. The numbered tiles can be combined into runs of three (e.g. 3, 4, 5) of the same suit, and all tiles can be combined into sets of two- or three-of-a-kind. Each player has a hand of 13 tiles, to which one is added at the start of their turn and one removed at the end; if after adding a tile, a player's hand consists of 4 runs or sets of 3 (including a combination of runs and sets) and one set of two, that player wins. When a tile is discarded, each player who did not discard it has a chance, in turn order, to take it and form a set of three, and if none do so, the next player can take it and form a run; if any of these things happen, the set or run formed with the discarded tile cannot be broken (tiles in it cannot be discarded or used in other sets or runs). If none of these occur, or it is the first round of the game, the next player draws a tile from the wall. When a player takes a tile, it becomes their turn regardless of whether they were next in line. When a player is one tile away from winning, that player can take that tile when discarded regardless of the normal rules for Pung and Chi, but cannot do so if a tile of the same type is in their discard pile."
+    "For the version of Shanghai Mahjong we are using, there are 34 types of tiles: numbers 1-9 for each of three suits, and 7 unnumbered honor suits. The numbered tiles can be combined into straights of three (e.g. 3, 4, 5) of the same suit, and all tiles can be combined into sets of three-of-a-kind (and one pair). Each player has a hand of 13 tiles, to which one is added at the start of their turn and one removed at the end; if after adding a tile, a player's hand consists of 4 melds (any straights and three-of-a-kind sets) and one set of two, that player wins. When a tile is discarded, each player who did not discard it has a chance, in turn order, to take it and form a set of three, and if none do so, the next player can take it and form straights; if any of these things happen, the three-of-a-kind or straights formed with the discarded tile cannot be broken (tiles in it cannot be discarded or used in other sets or straights). If none of these occur, or it is the first round of the game, the next player draws a tile from the wall. When a player takes a tile, it becomes their turn regardless of whether they were next in line. When a player is one tile away from winning, that player can take that tile when discarded regardless of the normal rules for Pung and Chi, but cannot do so if a tile of the same type is in their discard pile."
    ]
   },
   {
@@ -144,15 +116,10 @@
     "  \n",
     "There are two parts of Mahjong that an agent needs to learn: when to Pung or Chi, and which tile to discard. Poor performance on either will result in poor performance overall; and since the two decisions will require separate decision-making elements, we decided it would be best to train an agent to a reasonable level of performance on one before forcing it to learn the other as well. This was a more efficient use of our time, as it made it much easier to create a model capable of learning something, and in principle seems likely to accelerate the agent's learning as well. To this end, we used heuristics to determine whether to Pung or Chi, while our agent learned which tile to discard. Namely, our agents will always Pung or Chi if possible.  \n",
     "  \n",
-    "The simplest way of training an agent using Monte Carlo methods would be to give it a positive reward for doing what we want it to do (winning a hand) and a negative reward for failing to do so. However, given the size of the state space and our limited time and computational resources, we decided to start out by also giving the model small rewards based on heuristic functions. We explored two possible heuristics: giving a small negative reward for discarding a tile that can form part of a run or set, and giving a small positive reward for getting a Pung or Chi. Such methods are generally inadvisable, as they carry the risk that the model will learn to maximize the heuristic in a way that doesn't improve actual performance. However, so long as we check our agents' performance using objective methods and abandon the heuristics when they cease to be useful (either when we notice a divergence in rewards and actual performance, or when the model reaches a certain level of performance), they may help accelerate the early phase of training - and given our limited time and computational resources, the sooner we reach the point where our agents have a somewhat usable strategy, the better.  \n",
+    "The simplest way of training an agent using Monte Carlo methods would be to give it a positive reward for doing what we want it to do (winning a hand) and a penalty for failing to do so. However, given the size of the state space and our limited time and computational resources, we decided to start out by also giving the model small rewards based on heuristic functions. We explored two possible heuristics: giving a small penalty for discarding a tile that can form part of a run or set, and giving a small positive reward for getting a Pung or Chi. Such methods are generally inadvisable, as they carry the risk that the model will learn to maximize the heuristic in a way that doesn't improve actual performance. However, so long as we check our agents' performance using objective methods and abandon the heuristics when they cease to be useful (either when we notice a divergence in rewards and actual performance, or when the model reaches a certain level of performance), they may help accelerate the early phase of training - and given our limited time and computational resources, the sooner we reach the point where our agents have a somewhat usable strategy, the better.  \n",
     "  \n",
     "The most reasonable benchmarks for performance are a random policy, for making sure that some learning occurs, and our own performance as amateur players - though the latter would require coding a user interface, and so is probably not worth the time."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -196,7 +163,9 @@
     " \n",
     "Where:  \n",
     "- $N_{win}$ = Number of games won  \n",
-    "- $N_{total}$= Total number of games played  "
+    "- $N_{total}$= Total number of games played  \n",
+    "\n",
+    "Assuming there are 4 players, the winrate should be at least 25%."
    ]
   },
   {
@@ -239,6 +208,34 @@
    "metadata": {},
    "source": [
     "# Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import random\n",
+    "# from monte_carlo_control import OnePlayerMahjongGame\n",
+    "# from monte_carlo_try import MonteCarlo"
    ]
   },
   {
